# agentic_terminal

./: .gitignore  README.md  SESSION_SUMMARY_2026-03-04.md  WHITEPAPER.md  entry_prompt_v2.md  implementation_plan.md  session_log.json  test_ccxt_executor.py  test_dynamic_assets.py  test_hyperliquid_api.py  test_llm_pipeline.py  whitepaper_v3.2.md
backend/: .env  .env.example  ARCHITECTURE.md  README.md  pyproject.toml  test_upload.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_exchange_accounts.py  0002_create_outbox_messages.py  0003_create_ema_scanner_config.py  0004_ema_state_mgr.py  0005_create_prompt_templates.py  0006_prompt_build_req.py  0007_image_uploader_cfg.py  0008_trade_guard.py  0009_automation_queues.py  0010_exchange_account_status.py  0011_update_market_defaults.py  0011b_expand_alembic_version.py  0012_create_agent_provider_configs.py  0013_create_scan_results.py  0013_dynamic_assets_config.py  0014_telegram_config.py  (+27 more)
backend/docs/: README.md  ai_providers.md  api_infra.md  bus-queue-visualization.md  chart_generator.md  circuit_breaker.md  database_schema.md  dynamic_assets.md  ema_scanner.md  ema_state_manager.md  image_uploader.md  llm_caller.md  llm_pipeline.md  llm_response_worker.md  market_settings.md  monitored_assets.md  multi_account_router_plan.md  oi_rank_module_plan.md  portfolio_exchange.md  quant_scanner.md  queue_worker.md  realtime_api.md  trade_executor.md  trade_guard.md
backend/scripts/: generate_fernet_key.py  pipeline_test.py
backend/tmp/: llm_prompt_example.txt  llm_response_example.txt
(+414 files in other folders)
